tdf#117867 dbahsql: Migrate default values

Default Value "NOW" is a special case, because Firebird likes it with
single quotes. In contrast, HSQLDB uses the keyword without quotes.

Add unit test for parsing default value "NOW"

Change-Id: I34886f8ae53e98addb52bf5e85030a03721d6a45