dbaccess/source/filter/hsqldb/columndef.cxx
@@ -27,7 +27,8 @@ using namespace css::sdbc;
 
 ColumnDefinition::ColumnDefinition(const OUString& sName, sal_Int32 eType,
                                    const std::vector<sal_Int32> aParams, bool bPrimary,
-                                   sal_Int32 nAutoIncr, bool bNullable, bool bCaseInsensitive)
+                                   sal_Int32 nAutoIncr, bool bNullable, bool bCaseInsensitive,
+                                   const OUString& sDefault)
     : m_sName(sName)
     , m_eType(eType)
     , m_aParams(aParams)
@@ -35,6 +36,7 @@ ColumnDefinition::ColumnDefinition(const OUString& sName, sal_Int32 eType,
     , m_nAutoIncrement(nAutoIncr)
     , m_bNullable(bNullable)
     , m_bCaseInsensitive(bCaseInsensitive)
+    , m_sDefaultValue(sDefault)
 {
 }
 }
